libmongoc 1.28.0 (unreleased)
=============================

Notes:

  * Bump minimum wire protocol version from 6 (MongoDB 3.6) to 7 (MongoDB 4.0).

Deprecated:

  * Use of `*_hint` functions is deprecated in favor of more aptly named `*_server_id` functions:
    * `mongoc_bulk_operation_set_hint` is deprecated for `mongoc_bulk_operation_set_server_id`
    * `mongoc_bulk_operation_get_hint` is deprecated for `mongoc_bulk_operation_get_server_id`
    * `mongoc_cursor_set_hint` is deprecated for `mongoc_cursor_set_server_id`
    * `mongoc_cursor_get_hint` is deprecated for `mongoc_cursor_get_server_id`

  * A future minor release plans to drop support for Visual Studio 2013.

libmongoc 1.27.4
================

Fixes:

  * Fix possible crash reading malformed wire protocol message.
  * Fix build with Visual Studio 2013.

Thanks to everyone who contributed to the development of this release.

  * Ezra Chung
  * Kevin Albertson



libmongoc 1.27.3
================

Notes:

  * This patch release introduces changes surrounding the development processes,
    including new code signing and dependency tracking. There are no behavioral
    or API changes.

Fixes:

  * Upgraded bundled Zlib from 1.2.3 to 1.3.1

Thanks to everyone who contributed to the development of this release.

  * Colby Pike



libmongoc 1.27.2
================

Fixes:

  * Close leftover connections to removed servers.

New features:

  * Check environment variable `MONGOC_EXPERIMENTAL_SRV_PREFER_TCP` to prefer TCP for SRV lookup.

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson



libmongoc 1.27.1
================

No changes since 1.27.0. Version incremented to match the libbson version.

libmongoc 1.27.0
================

Notes:

  * Raise required version of libmongocrypt to 1.10.0 to support In-Use Encryption (corresponds to the CMake option: `ENABLE_CLIENT_SIDE_ENCRYPTION`).