@@ -181,6 +181,8 @@ if [[ "${OSTYPE}" == darwin* ]]; then
     sysctl -n hw.logicalcpu
   }
 fi
+export CMAKE_BUILD_PARALLEL_LEVEL
+CMAKE_BUILD_PARALLEL_LEVEL="$(nproc)"
 
 declare -a extra_configure_flags
 IFS=' ' read -ra extra_configure_flags <<<"${EXTRA_CONFIGURE_FLAGS:-}"
@@ -208,5 +210,11 @@ CCACHE_BASEDIR="$(pwd)"
 CCACHE_NOHASHDIR=1
 
 "${cmake_binary}" "${configure_flags[@]}" ${extra_configure_flags[@]+"${extra_configure_flags[@]}"} .
-"${cmake_binary}" --build . -- -j "$(nproc)"
-"${cmake_binary}" --build . --target install
+"${cmake_binary}" --build .
+"${cmake_binary}" --install .
+
+# For use by test tasks, which directly use the binary directory contents.
+"${cmake_binary}" --build . --target mongo_c_driver_tests
+
+# Also validate examples.
+"${cmake_binary}" --build . --target mongo_c_driver_examples
