@@ -91,10 +91,10 @@ mongo_bool_setting(ENABLE_DEBUG_ASSERTIONS "Build library with runtime debug ass
 include(Sanitizers)
 
 # Toggle optional components:
-mongo_bool_setting(ENABLE_TESTS "Build MongoDB C Driver tests")
-mongo_bool_setting(ENABLE_EXAMPLES "Build MongoDB C Driver examples")
-mongo_bool_setting(ENABLE_MAN_PAGES "Build the manual pages" DEFAULT VALUE OFF)
-mongo_bool_setting(ENABLE_HTML_DOCS "Build the HTML documentation" DEFAULT VALUE OFF)
+mongo_bool_setting(ENABLE_TESTS "Enable building MongoDB C Driver tests")
+mongo_bool_setting(ENABLE_EXAMPLES "Enable building MongoDB C Driver examples")
+mongo_bool_setting(ENABLE_MAN_PAGES "Enable building the manual pages" DEFAULT VALUE OFF)
+mongo_bool_setting(ENABLE_HTML_DOCS "Enable building the HTML documentation" DEFAULT VALUE OFF)
 mongo_bool_setting(ENABLE_UNINSTALL "Generate an 'uninstall' script and an 'uninstall' build target")
 mongo_bool_setting(ENABLE_SRV "Enable support for mongodb+srv URIs.")
 
@@ -423,6 +423,10 @@ if (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    add_definitions (-D_DARWIN_C_SOURCE)
    list (APPEND CMAKE_REQUIRED_DEFINITIONS -D_DARWIN_C_SOURCE)
 endif ()
+
+# Convenience targets to build all tests or all examples.
+add_custom_target(mongo_c_driver_tests)
+add_custom_target(mongo_c_driver_examples)
 
 add_subdirectory (src/common)
 
